--- a/examples/HelloWorld/lib/private/templates/item.html
+++ b/examples/HelloWorld/lib/private/templates/item.html
@@ -7,5 +7,6 @@
     <img src="/{id}.jpg" width="320" height="290" alt="media" />
     <p>{description}</p>
     <a href="/">Go back</a>
+    {saffron}
 </body>
 </html>
