Test a field too in the WebForm example

--- a/examples/WebForm/lib/templates/index.upload.html
+++ b/examples/WebForm/lib/templates/index.upload.html
@@ -3,6 +3,7 @@
     <title>Web Form</title>
 </head>
 <body>
+    <p>Title: {title}</p>
     <p>Upload path: {path}</p>
     <p>Upload size: {size}</p>
 </body>
