--- a/examples/AuthTest/lib/templates/login.html
+++ b/examples/AuthTest/lib/templates/login.html
@@ -5,8 +5,8 @@
 <body>
     <h1>Sign-in (password: 'abc')</h1>
     <form id="login" action="/login" method="post">
-        Username: <input type="text" name="username" id="username" value="{user}" /><br />
-        Password: <input type="password" name="password" id="password" /><br />
+        {@localize str="username" /}: <input type="text" name="username" id="username" value="{user}" /><br />
+        {@localize str="password" /}: <input type="password" name="password" id="password" /><br />
         <input type="hidden" name="state" value="{state}" />
         <input type="submit" value="Login" />
     </form>
