Update Widget demo to use the new :render style

--- a/examples/WidgetDemo/lib/templates/index.html
+++ b/examples/WidgetDemo/lib/templates/index.html
@@ -41,19 +41,19 @@
         </div>
         <div class="one-third column">
             A button:<br />
-            {button1}
+            {renderButton1}
         </div>
         <div class="one-third column">
             A list:<br />
-            {list1}<br />
+            {renderList1}<br />
         </div>
         <div class="one-third column">
             Single choice (popup):<br />
-            {choices1}<br />
+            {renderChoices1}<br />
             Single choice:<br />
-            {choices2}<br />
+            {renderChoices2}<br />
             Multiple choices:<br />
-            {choices3}
+            {renderChoices3}
         </div>
     </div>
     {saffron}
